--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.gitignore
+.gitattributes
+
 Module 1 - SIRVD/*
 
 !Module 1 - SIRVD/simulations/
@@ -7,3 +10,5 @@ Module 1 - SIRVD/*
 !Module 1 - SIRVD/sirvd_vacc-dead.py
 
 !Module 1 - SIRVD/README.md
+
+!Module 1 - SIRVD/sirvd-gif.py
